simplify tests